# acme-bash

./: .gitignore  README.md  acme-bash.cabal
src/Acme/: Bash.hs
test/: Spec.hs
