name:                acme-bash
version:             0.1.0.0
synopsis:            Bash isomorphisms for Haskell.
description:         Please see README.md
homepage:            http://github.com/alvare/acme-bash
license:             BSD3
license-file:        LICENSE
author:              Ezequiel A. Alvarez
maintainer:          welcometothechango@gmail.com
category:            Acme
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Acme.Bash
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -threaded -Wall
  default-language:    Haskell2010

test-suite acme-bash-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , acme-bash
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -ddump-splices
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/alvare/acme-bash
